# S.A.T.U.R.D.A.Y

./: .dockerignore  .firebaserc  .gitignore  AEGIS.md  CMakeLists.txt  Dockerfile  PRODUCTION.md  QUICKSTART.md  README.md  SECURITY.md  aegis.service  aegis_always_on.py  aegis_env.py  aegis_launcher.py  aegis_self_server.py  aegis_unified_server.py  api_gateway.py  auth_validator.py  command_policy.py  diagnose_mac.py  disk_monitor.py  docker-compose.yml  firebase.json  flash_homebot_core2.py  flash_real_core2.py  gateway.env.example  homebot_flash.py  install_all_packages.bat  install_service.py  manual_flash_instructions.md  mqtt_broker.yml  mqtt_network.py  package-lock.json  pyproject.toml  railway.json  render.yaml  requirements-cloud.txt  requirements.gateway.txt  requirements.txt  requirements_mac.txt  (+29 more)
.github/: dependabot.yml
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
AEGIS_SYSTEM/: README.md  main.py
AEGIS_SYSTEM/aegis/: aegis_core.py  controller.py
AEGIS_SYSTEM/config/: settings.json
AEGIS_SYSTEM/interface/: cli.py  voice.py
AEGIS_SYSTEM/pmv/: deadman.py  file_crypto.py  memory_engine.py
AEGIS_SYSTEM/tests/: system_test.py
SATURDAY_SYSTEM/: README.md  main.py  realtime_bridge.py  requirements.txt
SATURDAY_SYSTEM/config/: settings.json
SATURDAY_SYSTEM/interface/: cli.py  voice.py
SATURDAY_SYSTEM/pmv/: deadman.py  file_crypto.py  memory_engine.py  node_manager.py
core/: admin_mood.py  aegis_voice.py  ai_agent.py  alert_manager.py  antivirus.py  audio_service.py  audio_speaker.py  audit.py  brain.py  cloud_bridge.py  config.json  config.py  cyber_defense.py  engagement.py  event_bus.py  greeting.py  homebot_integration.py  human_interface.py  learning_manager.py  logging_config.py  main.py  malware_guard.py  pipeline.py  rbac.py  remote_desktop.py  runtime.py  saturday_voice.py  secure_gateway_mount.py  security.py  self_heal.py  self_healing.py  self_rewrite.py  sound_monitor.py  spatial_audio.py  state.json  state.py  system_monitor.py  system_tray.py  task_manager.py  usb_watchdog.py  (+4 more)
core/aegis-core/: CMakeLists.txt  README.md  build.ps1
core/aegis-core/build-codex/: AEGISCore.sln  CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
core/aegis-core/build-codex/aegis-core.dir/Release/aegis-core.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.read.1.tlog
core/aegis-core/build-codex/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
core/aegis-core/src/: main.cpp
core/aegis-core/src/audio/: audioengine.cpp  audioengine.h  fftprocessor.cpp  fftprocessor.h
core/aegis-core/src/core/: application.cpp  application.h  logger.cpp  logger.h  orbitalcore.cpp  orbitalcore.h  raii.h  timer.h
core/aegis-core/src/networking/: serialization.cpp  serialization.h  websocketclient.cpp  websocketclient.h
core/aegis-core/src/rendering/: mesh.cpp  mesh.h  postprocess.cpp  postprocess.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h
core/aegis-core/src/state/: aisstate.cpp  aisstate.h  statemanager.cpp  statemanager.h
core/backend/: main.py
data/: audio_calibration.json  faces.json  first_boot_setup.json  instagram_credentials.json  knowledge.jsonl  voice_profiles.json
scripts/: c_drive_audit.ps1  calibrate_audio_thresholds.py  check_mic_and_voice_pipeline.py  strip_comments_repo.py  test.ps1
(+284 files in other folders)
